perf: use array instead of m2m relations in for, against, abstain field
