# models.go
@@ -1,6 +1,8 @@
 package main
 
 import (
+	"database/sql/driver"
+	"encoding/json"
 	"gorm.io/driver/sqlite"
 	"gorm.io/gorm"
 	"os"
@@ -8,7 +10,7 @@ import (
 )
 
 type BaseModel struct {
-	ID        uint      `gorm:"primarykey" json:"id"`
+	ID        int       `gorm:"primarykey" json:"id"`
 	CreatedAt time.Time `json:"createdAt"`
 	UpdatedAt time.Time `json:"updatedAt"`
 }
@@ -23,24 +25,31 @@ type Session struct {
 	Motions []Motion `json:"motions"`
 }
 
-type SimpleMotion struct {
-	BaseModel
-	Name        string `binding:"required" json:"name"`
-	Description string `json:"description"`
-	SessionID   int    `json:"sessionID"`
-	Status      int8   `json:"status"`
-}
-
 type Motion struct {
-	SimpleMotion
-	For     []User `json:"for"     gorm:"many2many:motion_for;"`
-	Against []User `json:"against" gorm:"many2many:motion_against;"`
-	Abstain []User `json:"abstain" gorm:"many2many:motion_abstain;"`
+	BaseModel
+	Name        string   `binding:"required" json:"name"`
+	Description string   `json:"description"`
+	SessionID   int      `json:"sessionID"`
+	Status      int8     `json:"status"`
+	UserID      int      `json:"userID"`
+	For         intArray `json:"for" `
+	Against     intArray `json:"against"`
+	Abstain     intArray `json:"abstain" `
 }
 
 type User struct {
 	BaseModel
 	Name string `json:"name" gorm:"unique" binding:"required"`
+}
+
+type intArray []int
+
+func (p intArray) Value() (driver.Value, error) {
+	return json.Marshal(p)
+}
+
+func (p *intArray) Scan(data interface{}) error {
+	return json.Unmarshal(data.([]byte), &p)
 }
 
 var db *gorm.DB
